v17.1/4.产品特性/7.报表(ReportSheet)/0.模板设置/13.公式与函数/1.获取层级单元格索引/0.获取值.md
# get-value

此功能用于获取任何溢出单元格的值。您还可以使用此功能计算您想要的任何统计数据，例如年度同比（YOY）、月度环比（MOM）、百分比、累计等。
可用的值函数如下。
语法和参数
`R.V(cell, [offset | context_cell])`
此函数可用于通过偏移或上下文获取特定溢出单元格的值。

| **参数** | **描述** |
| --- | --- |
| *cell* | [必需] 指定您想要获取数据的单元格。<br>示例：R.V(C2)<br>这个公式将返回C2单元格的所有值作为一个数组，因此您可以使用 SUM(R.V(C2)) 来获取所有C2单元格值的总和 |
| *offset* | [可选] 指定偏移量（R.A 或 R.R），您可以指定多个偏移量，最多254个。<br>示例：R.V(C2, R.A(A2, 1))，这将获取A2扩展单元格的第一组中的C2单元格值 |
| *context\_cell* | [可选] 指定上下文单元格，上下文单元格将过滤目标单元格值。<br>您可以指定最多两个上下文单元格，一个垂直上下文和一个水平上下文。<br>示例：<br>如果A2单元格绑定到年份列，B2单元格绑定到月份列，C2单元格绑定到销售列。<br>• R.V(C2, A2) 将返回当前年份的所有销售额作为数组。<br>• C2/SUM(R.V(C2, A2)) 将返回当前月份的销售额占年销售额的百分比。 |
| *CurrentPage* | [可选] 指定当前页面作为上下文。您可以使用此上下文获取当前页面中溢出的单元格值。<br>例子：<br>如果 A2 单元格绑定到年份列，B2 单元格绑定到月份列，C2 单元格绑定到销售列。<br>`R.V(C2, "CurrentPage")` 将返回当前页面中所有销售额作为一个数组。<br>`SUM(R.V(C2, "CurrentPage"))` 将返回销售页面总额。 |

`R.A(cell, offset)`
（绝对偏移）此函数只能作为R.V函数的参数使用。

| **参数** | **描述** |
| --- | --- |
| *cell* | [必需] 指定您想要用作偏移单元格的单元格。 |
| *offset* | [必需] 指定偏移数。<br>示例：<br>如果A2单元格绑定到年份列，B2单元格绑定到月份列，C2单元格绑定到销售列。<br>• R.V(C2, R.A(A2, 1), R.A(B2, 5)) 将返回第一年第五个月的销售额。<br>• R.V(C2, R.A(A2, 2), R.A(B2, 2)) 将返回第二年第二个月的销售额。 |

`R.R(cell, offset)`
（相对偏移）此函数只能作为R.V函数的参数使用。

| **参数** | **描述** |
| --- | --- |
| *cell* | [必需] 指定您想要用作偏移单元格的单元格。 |
| *offset* | [必需] 指定偏移数。<br>示例：<br>如果A2单元格绑定到年份列，B2单元格绑定到月份列，C2单元格绑定到销售列。<br>• R.V(C2,R.R(B2,-1)) 将返回上个月的销售额。<br>• C2/R.V(C2,R.R(B2,-1)) 将返回环比增长值。<br>第一个月将获得一个空值，这会导致 #DIV/0! 错误。在这种情况下，使用 IF 函数来处理它。<br>因此，最终函数将是 IF(R.V(C2,R.R(B2,-1))>0,C2/R.V(C2,R.R(B2,-1)),0)。 |

示例

```auto
// Use the formula (R.V) to get the value of any spilled cell.
templateSheet.setFormula(2, 4, "R.V(D3,R.R(A3,-1))");
templateSheet.setFormula(2, 5, "R.V(D3,R.R(C3,-1))");
templateSheet.setFormula(2, 6, "R.V(D3,R.R(B3,-1))");
templateSheet.setFormula(2, 7, "R.V(D3,R.A(A3,2))");
templateSheet.setFormula(2, 8, "R.V(D3,R.A(A3,2),R.A(B3,1),R.A(C3,2))");
```

输出如下：
![image](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/ca82939a-5d1a-4838-9f3f-69a0f7ebeeb5/image.f1053c.png)